--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.about_image{
+  min-width: 100%;
+  max-height: 280px;
+}
+.gimg{
+  min-width: 100%;
+  max-height: 200px;
+  overflow: auto;
+}
+
+.navbar{
+  background-color: crimson!important;
+}
+
+.navbar-brand{
+  color: rgb(50, 50, 201)!important;
+  font-size: 30px !important;
+  font-weight: bold;
+}
+
+.navbar-nav li a{
+  color: rgb(26, 24, 24)!important;
+  font-size: 20px;
+  font-weight: bold;
+  position: relative;
+}
+
+.navbar-nav li a::before{
+position: absolute;
+content: '';
+background-color: white;
+height: 7%;
+top:100%;
+bottom: 50%;
+
+width: 0%;
+transition: 0.5s all ease;
+}
+.navbar-nav li a:hover::before{
+  width: 80%;
+}
+
+@media(max-width:900px){
+  .nav-item{
+    text-align: center;
+    align-items: center;
+  }
+  .navbar-nav li a:hover::before{
+    width: 0%;
+  }
 }
